--- a/app/src/main/res/layout/activity_my_wallet.xml
+++ b/app/src/main/res/layout/activity_my_wallet.xml
@@ -128,7 +128,7 @@
                                 android:id="@+id/monthlyAvgLabel"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Monthly Avg"
+                                android:text="Monthly Avg Expenses"
                                 android:textColor="@color/grey_light"
                                 android:textSize="12sp"
                                 android:fontFamily="@font/manrope_medium" />
