--- a/app/src/main/res/layout/item_budgets.xml
+++ b/app/src/main/res/layout/item_budgets.xml
@@ -26,8 +26,8 @@
         android:layout_height="wrap_content"
         android:text="21"
         android:textSize="16sp"
-        android:textColor="#FF6666"
-        android:fontFamily="@font/manrope_regular"
+        android:textColor="@color/orange"
+        android:fontFamily="@font/manrope_bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
