--- a/app/src/main/res/layout/item_budgets.xml
+++ b/app/src/main/res/layout/item_budgets.xml
@@ -36,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:layout_marginTop="8dp"
         android:contentDescription="@null"
         app:layout_constraintTop_toBottomOf="@id/walletName"
@@ -44,8 +45,7 @@
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_person"
-            android:padding="4dp" />
+            android:src="@drawable/ic_person" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -57,6 +57,7 @@
             android:fontFamily="@font/manrope_bold" />
 
     </LinearLayout>
+
 
     <TextView
         android:id="@+id/statusText"
