--- a/app/src/main/res/layout/activity_budget_expense_details.xml
+++ b/app/src/main/res/layout/activity_budget_expense_details.xml
@@ -78,7 +78,6 @@
             android:orientation="vertical"
             android:paddingHorizontal="16dp">
 
-
             <LinearLayout
                 android:id="@+id/infoList"
                 android:layout_width="match_parent"
@@ -93,6 +92,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
+                <!-- View mode -->
                 <TextView
                     android:id="@+id/expenseAmount"
                     android:layout_width="wrap_content"
@@ -101,15 +101,35 @@
                     android:textSize="16sp"
                     android:layout_marginBottom="16dp" />
 
-                <EditText
-                    android:id="@+id/expenseAmountEdit"
+                <!-- Edit mode -->
+                <LinearLayout
+                    android:id="@+id/amountEditRow"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="numberDecimal"
-                    android:textColor="@android:color/white"
-                    android:textSize="16sp"
+                    android:orientation="horizontal"
                     android:visibility="gone"
-                    android:layout_marginBottom="16dp" />
+                    android:layout_marginBottom="16dp"
+                    android:gravity="center_vertical">
+
+                    <EditText
+                        android:id="@+id/expenseAmountEdit"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:inputType="numberDecimal"
+                        android:textColor="@android:color/white"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/expenseAmountCurrency"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:text="EUR"
+                        android:textColor="@color/grey_light"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/manrope_bold" />
+                </LinearLayout>
 
                 <TextView
                     android:text="Description"
@@ -214,7 +234,6 @@
 
                 </LinearLayout>
 
-
                 <TextView
                     android:text="For Whom"
                     android:textColor="#AAAAAA"
@@ -235,6 +254,4 @@
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
